kubernetes/cloud/applications/wireguard/statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wg-easy
  namespace: wg-easy
spec:
  serviceName: wg-easy
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wg-easy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wg-easy
    spec:
      containers:
        - name: wg-easy
          resources:
            requests:
              cpu: "10m"
              memory: "30Mi"
            limits:
              cpu: "500m"
              memory: "1000Mi"
          image: ghcr.io/wg-easy/wg-easy:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 51820
              protocol: UDP
            - containerPort: 51821
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          volumeMounts:
            - name: config
              mountPath: /etc/wireguard
      restartPolicy: Always
  volumeClaimTemplates:
    - apiVersion: v1	
      kind: PersistentVolumeClaim
      metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
